--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,4 +1,12 @@
----
+@misc{freitas2024solverintheloopapproachturbulenceclosure,
+      title={Solver-in-the-loop approach to turbulence closure}, 
+      author={André Freitas and Kiwon Um and Mathieu Desbrun and Michele Buzzicotti and Luca Biferale},
+      year={2024},
+      eprint={2411.13194},
+      archivePrefix={arXiv},
+      primaryClass={physics.flu-dyn},
+      url={https://arxiv.org/abs/2411.13194}, 
+}---
 ---
 
 
