--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,23 +1,7 @@
----
----
-
-@string{aps = {American Physical Society,}}
-
-% @book{einstein1920relativity,
-%   title={Relativity: the Special and General Theory},
-%   author={Einstein, Albert},
-%   year={1920},
-%   publisher={Methuen & Co Ltd},
-%   html={relativity.html}
-% }
-
-@misc{freitas2024solverintheloopapproachturbulenceclosure,
-      title={Solver-in-the-loop approach to turbulence closure}, 
-      author={André Freitas and Kiwon Um and Mathieu Desbrun and Michele Buzzicotti and Luca Biferale},
-      year={2024},
-      eprint={2411.13194},
-      archivePrefix={arXiv},
-      primaryClass={physics.flu-dyn},
-      url={https://arxiv.org/abs/2411.13194}, 
+@article{freitasSOL,
+  title={Solver-in-the-loop approach to turbulence closure},
+  author={André Freitas and Kiwon Um and Mathieu Desbrun and Michele Buzzicotti and Luca Biferale},
+  journal={arXiv},
+  year={2024},
+  url={https://arxiv.org/abs/2411.13194}
 }
-
